# libwebcash

./: .gitignore  .gitmodules  Makefile.am  README.md  configure.ac
build-aux/m4/: bstring.m4  sha2.m4
include/: webcash.h
lib/: Makefile.am  libwebcash.pc.in  webcash.c
lib/support/: cleanse.c  cleanse.h
test/: .gitignore  Makefile.am  webcash.cc
